CloudAlpacas-repo/salesforce/main/default/objects/SDO_GenAI_Feedback__c/fields/feature__c.field-meta.xml
<CustomField>
    <fullName>feature__c</fullName>
    <description>Feature that produced the generation. Passthrough to GenAIFeedback__dlm.feature__c.</description>
    <label>Feature</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service_Planner</fullName>
                <default>true</default>
                <label>Service Planner</label>
            </value>
            <value>
                <fullName>Case_Summarize</fullName>
                <label>Case Summarize</label>
            </value>
            <value>
                <fullName>Reply_Recommender</fullName>
                <label>Reply Recommender</label>
            </value>
            <value>
                <fullName>Knowledge_Answer</fullName>
                <label>Knowledge Answer</label>
            </value>
            <value>
                <fullName>Work_Summaries</fullName>
                <label>Work Summaries</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>