CloudAlpacas-repo/salesforce/main/default/objects/SDO_GenAI_Feedback__c/fields/feedback__c.field-meta.xml
<CustomField>
    <fullName>feedback__c</fullName>
    <description>Sentiment value. Passthrough to GenAIFeedback__dlm.feedback__c. Enum values chosen to stay stable across locales so downstream visualizations do not drift.</description>
    <label>Feedback</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GOOD</fullName>
                <default>true</default>
                <label>GOOD</label>
            </value>
            <value>
                <fullName>BAD</fullName>
            </value>
            <value>
                <fullName>NEUTRAL</fullName>
            </value>
            <value>
                <fullName>NEGATIVE</fullName>
                <isActive>false</isActive>
                <label>NEGATIVE</label>
            </value>
            <value>
                <fullName>POSITIVE</fullName>
                <isActive>false</isActive>
                <label>POSITIVE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>