CloudAlpacas-repo/salesforce/main/default/objects/SDO_GenAI_Feedback__c/fields/Generated_Operation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Generated_Operation_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Convenience lookup to the parent plan. Not mapped to the DMO; before-save automation copies Generated_Operation_Plan__r.Feedback_Identifier__c into generationId__c for FK consistency.</description>
    <label>Related Plan</label>
    <referenceTo>SDO_Generated_Operation_Plan__c</referenceTo>
    <relationshipLabel>SDO GenAI Feedback</relationshipLabel>
    <relationshipName>SDO_GenAI_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>