CloudAlpacas-repo/salesforce/main/default/objects/SDO_GenAI_Feedback__c/fields/generationGroupId__c.field-meta.xml
<CustomField>
    <fullName>generationGroupId__c</fullName>
    <description>Grouping identifier for related generations. Passthrough to GenAIFeedback__dlm.generationGroupId__c.</description>
    <label>Generation Group Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>