CloudAlpacas-repo/salesforce/main/default/objects/SDO_GenAI_Feedback__c/fields/generationId__c.field-meta.xml
<CustomField>
    <fullName>generationId__c</fullName>
    <description>Joins to SDO_Generated_Operation_Plan__c.Feedback_Identifier__c. Matches semantic model join Generated_Operation_Plan4.Feedback_Identifier = GenAIFeedback4.Generation_Id.</description>
    <label>Generation Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>