CloudAlpacas-repo/salesforce/main/default/objects/SDO_GenAI_Feedback__c/fields/source__c.field-meta.xml
<CustomField>
    <fullName>source__c</fullName>
    <description>UI surface the feedback originated from. Passthrough to GenAIFeedback__dlm.source__c.</description>
    <label>Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>