CloudAlpacas-repo/salesforce/main/default/objects/SDO_GenAI_Feedback__c/fields/timestamp__c.field-meta.xml
<CustomField>
    <fullName>timestamp__c</fullName>
    <description>When the feedback was submitted. SE-editable for date shifting. Passthrough to GenAIFeedback__dlm.timestamp__c.</description>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>